polishing and UI/UX aaaaaah

--- a/Client/Pages/Birds.razor
+++ b/Client/Pages/Birds.razor
@@ -5,9 +5,11 @@
 <PageTitle>Ptáčci</PageTitle>
 
 <h1 class="mb-4">Ptáčci</h1>
+<HelpBox InitiallyVisible="true">
+Seznam všech ptáčků v aplikaci. Jestli zrovna ten tvůj chybí, přidej ho! Ale pozor - prosím, nepřidávejte ptáčky, kteří už existují. Byl by to zbytečný zmatek...
+</HelpBox>
 
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <p class="mb-0 text-muted">Seznam všech zaregistrovaných ptáků ve vaší aplikaci.</p>
     <Button Type="ButtonType.Link" To="/ptacek/novy" Color="ButtonColor.Primary">
         ➕ Přidat ptáčka
     </Button>
