--- a/Client/Pages/Events.razor
+++ b/Client/Pages/Events.razor
@@ -5,6 +5,11 @@
 <PageTitle>Soutěže</PageTitle>
 
 <h1 class="mb-4">🕊️ Soutěže</h1>
+<HelpBox InitiallyVisible="false">
+Přidej se do soutěže, aby ses mohl(a) porovnat s ostatními. <br/>
+Každá soutěž má svůj speciální kód. Buď si můžeš najít veřejnou soutěž, anebo Tě někdo musí pozvat a dát Ti ten kód. Pak se přidáš pomocí tlačítka s klíčem (🔑). <br />
+Taky je možný nějakou soutěž založit. To se dělá na tlačítku s plusem (➕), ale to je spíš pro vedoucí, anebo technické typy lidí.
+</HelpBox>
 
 <div class="mb-3 d-flex flex-wrap align-items-end gap-3">
     <div>
