--- a/Client/Pages/Watchers.razor
+++ b/Client/Pages/Watchers.razor
@@ -5,6 +5,22 @@
 <PageTitle>Ptáčkaři</PageTitle>
 
 <h1 class="mb-4">Ptáčkaři</h1>
+<HelpBox InitiallyVisible="false">
+        <p>
+            Můžeš se starat o více ptáčkařů – tedy o sebe, sourozence nebo kamarády, kteří s tebou pozorují ptáčky.
+        </p>
+        <p>
+            Představ si, že jdete s rodinou na procházku. Všichni jste ptáčkaři a uvidíte čápa. Buď každý vytáhne mobil a zaznamená ho zvlášť…
+            <br />
+            Anebo stačí, když záznam vytvoříš Ty a označíš, že ho viděli všichni.
+        </p>
+        <p>
+            Každý ptáčkař má svůj vlastní speciální kód. Když si vytvoříš ptáčkařský profil (<strong>Vytvořit ptáčkaře</strong>), jeden takový kód dostaneš.
+        </p>
+        <p>
+            Když Ti někdo svůj kód řekne, můžeš si ho přidat do aplikace (<strong>Přidat existujícího</strong>) a spravovat jeho záznamy.
+        </p>
+</HelpBox>
 
 <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-4">
     <Button Type="ButtonType.Link" To="/ptackar/novy" Color="ButtonColor.Primary" class="px-4">
